# nlp-labelling

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-actions.yml
dataqa/: Dockerfile  docker-compose.yml  pyproject.toml
dataqa-ui/: .babelrc  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
dataqa-ui/public/: index.html
dataqa-ui/src/: app.js  utils.js
dataqa-ui/src/components/: NotFoundPage.js  SideBar.js  constants.js  utils.js
dataqa-ui/src/routers/: AppRouter.js  ProjectStartPage.js
dataqa-ui/src/styles/: theme.js
dataqa/root/: manage.py
dataqa/root/accountapp/: admin.py  apps.py  models.py
dataqa/root/accountapp/migrations/: 0001_initial.py
dataqa/root/annotateapp/: admin.py  apps.py  extract.py  models.py
dataqa/root/annotateapp/migrations/: 0001_initial.py  0002_documentlabel_rule_rule_engine_and_more.py
dataqa/root/annotateapp/ruleengine/: __init__.py  interventions_rule.py  regex_rule.py
dataqa/root/annotateapp/tests/: fixtures.py  test_intervention_rules.py
dataqa/root/dataqa/: asgi.py  settings.py  urls.py  wsgi.py
src/dataqa/: constants.py
src/dataqa/api/: __init__.py
src/dataqa/config/: common_config.ini  config_reader.py
src/dataqa/db/: connection.py  models.py  schemas.py  utils.py
src/dataqa/entry_points/: run_app.py
src/dataqa/ml/: distant_supervision.py  sentiment.py
src/dataqa/nlp/: nlp_classification.py  nlp_ner.py  nlp_utils.py  spacy_file_utils.py  spacy_nlp.py
src/dataqa/wiki/: utils.py
(+142 files in other folders)
